fix some tests